<resources>
    <string name="app_name">Popular Movies</string>

    <string name="content_description">none</string>
    <!--Settings strings-->
    <string name="pref_sort_summary_popularity">Popularity</string>
    <string name="pref_sort_summary_rating">Rating</string>
    <string name="pref_sort_default">popularity.desc</string>
    <string name="pref_sort_title">Sort movies by:</string>
    <string name="pref_sort_key">sort</string>
    <string name="pref_summary">Select preferable sort option</string>
    <string name="pref_default_image_quality">w342</string>
    <string name="pref_adult_checkbox">Show adult movies</string>
    <bool name="pref_default_adult_checkbox">false</bool>
    <string name="pref_adult_checkbox_summary">This option if selected will include adult movies</string>
    <string name="pref_adult_check_box_key">adult</string>
    <string name="pref_image_quality_key">image_quality_key</string>
    <string name="pref_image_quality_summary">Select quality of posters</string>
    <string name="pref_image_quality_title">Poster quality</string>

    <!--Setting ListPreference strings-->
    <array name="entries">
        <item>Popularity</item>
        <item>Rating</item>
        <item>Favorites</item>
    </array>
    <array name="entry_values">
        <item>popularity.desc</item>
        <item>vote_count.desc</item>
        <item>favorites</item>

    </array>

    <array name="image_quality_entries">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </array>

    <array name="image_quality_values">
        <item>w185</item>
        <item>w342</item>
        <item>w500</item>
    </array>

    <!--Menus-->
    <string name="menu_settings_title">Settings</string>
    <string name="menu_scroll_top">Scroll to the top</string>

    <string name="average_rating">Average rating: %1$s</string>
    <string name="trailers_title">Trailers:</string>
    <string name="content_description_play_trailer">play trailer</string>
    <string name="reviews_title">Reviews:</string>
    <string name="delete_movie_from_favorites">Delete movie from favorites?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="no_trailer_found">This movie doesn\'t have any trailers</string>
    <string name="share">Share</string>


    <array name="spinner_list">
        <item>Most Popular</item>
        <item>Most Rated</item>
        <item>Favorites</item>
    </array>

</resources>
